# Bomberman-Global-Offensive

./: .codecov.yml  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CREDITS  Doxyfile  LICENSE  README.md  _a_scene_8cpp.html  _a_scene_8cpp__incl.dot  _a_scene_8hpp.html  _a_scene_8hpp__dep__incl.dot  _a_scene_8hpp__incl.dot  _a_scene_8hpp_source.html  _a_shape_8hpp.html  _a_shape_8hpp__dep__incl.dot  _a_shape_8hpp__incl.dot  _a_shape_8hpp_source.html  _animation_8cpp.html  _animation_8cpp__incl.dot  _animation_8cpp_source.html  _animation_8hpp.html  _animation_8hpp__dep__incl.dot  _animation_8hpp__incl.dot  _animation_8hpp_source.html  _asset_map_8hpp.html  _asset_map_8hpp__dep__incl.dot  _asset_map_8hpp__incl.dot  _asset_map_8hpp_source.html  _audio_8cpp.html  _audio_8cpp__incl.dot  _audio_8cpp_source.html  _audio_8hpp.html  _audio_8hpp__dep__incl.dot  _audio_8hpp__incl.dot  _audio_8hpp_source.html  _bit_set_8cpp.html  _bit_set_8cpp__incl.dot  _bit_set_8cpp_source.html  (+1597 more)
cmake/mujs/: CMakeLists.txt
src/: .gitignore  CMakeLists.txt  dummy.cpp  main.cpp  shell.html
src/Raylib/: CMakeLists.txt  Camera3D.cpp  Camera3D.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  Window.cpp  Window.hpp
src/Raylib/Core/: CMakeLists.txt  Camera3D.cpp  Camera3D.hpp  Cursor.cpp  Cursor.hpp  Mouse.cpp  Mouse.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  Window.cpp  Window.hpp
src/Raylib/Shapes/: CMakeLists.txt  Circle.hpp  Pixel.cpp  Pixel.hpp  Rectangle.cpp  Rectangle.hpp
src/bomberman/: CMakeLists.txt  Profile.hpp
src/bomberman/map/: CMakeLists.txt  Map.cpp  Map.hpp
src/ecs/: CMakeLists.txt  Component.hpp  Entity.hpp  Instances.hpp  Join.hpp  Storage.hpp  System.hpp  SystemData.hpp  World.cpp  World.hpp  join.hpp
src/ecs/join/: CMakeLists.txt  Join.hpp  Joinable.hpp  MaybeJoin.hpp
src/ecs/resource/: CMakeLists.txt  Entities.cpp  Entities.hpp  Resource.hpp  Timer.cpp  Timer.hpp
src/ecs/storage/: CMakeLists.txt  MapStorage.hpp  MarkerStorage.hpp  Storage.hpp  TreeStorage.hpp
src/ecs/system/: CMakeLists.txt  System.hpp  SystemData.hpp  SystemTag.cpp  SystemTag.hpp
src/ecs/world/: CMakeLists.txt  Entities.cpp  Entities.hpp  Instances.hpp  Resource.hpp  World.cpp  World.hpp
src/game/: AnimTimer.hpp  CMakeLists.txt  Engine.cpp  Engine.hpp  Game.cpp  Game.hpp  GameAction.hpp  GameTimer.hpp  User.cpp  User.hpp  Users.cpp  Users.hpp
src/game/components/: AiControlable.cpp  AiControlable.hpp  Animation.hpp  Background.hpp  Bomb.cpp  Bomb.hpp  BombNoClip.cpp  BombNoClip.hpp  CMakeLists.txt  Collidable.hpp  Color.hpp  Controlable.hpp  Cube.hpp  CubeColor.hpp  Destructible.hpp  Explosion.cpp  Explosion.hpp  GameEnded.hpp  History.cpp  History.hpp  Hud.cpp  Hud.hpp  Identity.cpp  Identity.hpp  Image.hpp  KeybindIntercepter.hpp  KeyboardInput.cpp  KeyboardInput.hpp  Living.hpp  Model.hpp  Movable.hpp  Player.cpp  Player.hpp  PlayerHud.cpp  PlayerHud.hpp  Position.hpp  Position2D.hpp  Rectangle.hpp  Reference.hpp  RotationAngle.hpp  (+13 more)
src/game/gui/: CMakeLists.txt
src/game/map/: CMakeLists.txt  CreateMap.cpp  CreateMap.hpp  Map.cpp  Map.hpp
src/game/resources/: AssetMap.hpp  CMakeLists.txt  Engine.hpp  GameClock.cpp  GameClock.hpp  Map.hpp  RandomDevice.hpp
src/game/scenes/: AScene.cpp  AScene.hpp  CMakeLists.txt  GameScene.hpp  IScene.hpp  MainMenuScene.cpp  MainMenuScene.hpp  MainScene.cpp  MainScene.hpp  SettingsMenuScene.cpp  SettingsMenuScene.hpp  SettingsScene.cpp  SettingsScene.hpp  SplashScene.cpp  SplashScene.hpp  TestScene.cpp  TestScene.hpp
src/game/settings/: CMakeLists.txt  GamepadInput.cpp  GamepadInput.hpp  Keybinds.cpp  Keybinds.hpp  Profile.cpp  Profile.hpp  Settings.cpp  Settings.hpp
src/game/systems/: AiUpdate.cpp  AiUpdate.hpp  Animation.hpp  Bomb.cpp  Bomb.hpp  CMakeLists.txt  ChangeCube.hpp  CheckGameEnd.hpp  Collision.cpp  Collision.hpp  Cube.hpp  DrawConsole.cpp  DrawConsole.hpp  DrawFpsCounter.cpp  DrawFpsCounter.hpp  DrawHud.cpp  DrawHud.hpp  DrawInputField.cpp  DrawInputField.hpp  DrawSelectedWidget.hpp  DrawText.cpp  DrawText.hpp  DrawTexture.cpp  DrawTexture.hpp  DrawTextureBackground.hpp  DrawingCube.hpp  Explosion.cpp  Explosion.hpp  InputManager.cpp  InputManager.hpp  Items.cpp  Items.hpp  KeybindIntercept.hpp  KillPlayer.hpp  Model.hpp  Movement.cpp  Movement.hpp  NoClip.hpp  PlaySoundOnce.hpp  Rectangle.hpp  (+12 more)
src/game/worlds/: AWorld.cpp  AWorld.hpp  CMakeLists.txt  GameWorld.cpp  GameWorld.hpp  IWorld.hpp  MainWorld.cpp  MainWorld.hpp  SettingsWorld.cpp  SettingsWorld.hpp  SplashWorld.cpp  SplashWorld.hpp  TestWorld.cpp  TestWorld.hpp  Worlds.cpp  Worlds.hpp
src/localization/: CMakeLists.txt  Localization.cpp  Localization.hpp  ResourceFile.cpp  ResourceFile.hpp  ResourceString.cpp  ResourceString.hpp  Resources.hpp  RessourceFile.cpp  RessourceFile.hpp  RessourceString.cpp  RessourceString.hpp  Ressources.cpp  Ressources.hpp
src/logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/menu/: CMakeLists.txt  MainMenu.cpp  MainMenu.hpp
src/raylib/: CMakeLists.txt  Window.cpp  Window.hpp  logger.cpp  raylib.hpp  text.cpp  text.hpp
src/raylib/core/: Audio.cpp  Audio.hpp  CMakeLists.txt  Camera2D.cpp  Camera2D.hpp  Camera3D.cpp  Camera3D.hpp  Color.cpp  Color.hpp  Cursor.cpp  Cursor.hpp  Gamepad.cpp  Gamepad.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp  Music.cpp  Music.hpp  Scopes.hpp  (+10 more)
src/script/: CMakeLists.txt  Engine.cpp  Engine.hpp  JsException.cpp  JsException.hpp  Mod.cpp  Mod.hpp  RegistryGuard.cpp  RegistryGuard.hpp  bindings.cpp  bindings.js  script.hpp
src/scripting/: CMakeLists.txt  scripting.cpp  scripting.hpp
src/util/: BitSet.cpp  BitSet.hpp  CMakeLists.txt  util.cpp  util.hpp
tests/: CMakeLists.txt  Utils.hpp  tests_dummy.cpp
tests/ecs/: CMakeLists.txt  tests_Join.cpp  tests_ecs.cpp
tests/localization/: CMakeLists.txt  test_resource_file.cpp  test_ressource_file.cpp
tests/raylib/: CMakeLists.txt  test_text.cpp
tests/settings/: CMakeLists.txt  test_GamepadInput.cpp  test_Settings.cpp
tests/util/: CMakeLists.txt  test_loadConfigFile.cpp  tests_BitSet.cpp  tests_util.cpp
(+3361 files in other folders)
